# clabs-tauri

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  CODE_SIGNING.md  INTEGRATION_TEST_REPORT.md  P0-IPC-COMPLETION.md  P2-S7-T1-SUMMARY.md  P3-S1-T1-SUMMARY.md  P3-S2-T1-SUMMARY.md  P3-S2-T2-INTEGRATION-TEST-SUMMARY.md  P3-S3-T1-SUMMARY.md  P3-S5-T1-SUMMARY.md  P4-T1-COMPLETION.txt  P4-T1-E2E-TEST-REPORT.md  P4-T2-SUMMARY.md  P4-T3-SUMMARY.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.renderer.config.ts
.claude/: settings.json
.claude/analysis/: architecture.json
.claude/commands/: package-mac.md  package-win.md
.github/: README.md
.github/workflows/: build-mac.yml  release.yml
Clabs/: Package.swift  TODO.md  vendor
docs/: RELEASE_CHECKLIST.md  slack-setup.md  spike-0a-libghostty-rs.md  spike-phase1-ghosttykit.md
resources/skillpack/: settings.json
scripts/: notarize.js
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_watcher.rs  lib.rs  main.rs  pty.rs  session.rs  setup.rs  skills.rs  usage_api.rs
src-tauri/src/alac/: instance.rs  listener.rs  manager.rs  mod.rs  view.rs
src-tauri/src/ghostty/: ffi.rs  ffi_generated.rs  manager.rs  mod.rs  native_view.rs  theme.rs
src-tauri/src/orchestrator/: ansi.rs  cli_profiles.rs  mod.rs  response_collector.rs  socket_server.rs
src-tauri/src/slack_bridge/: listener.rs  mod.rs  responder.rs
src-tauri/src/stores/: config.rs  license.rs  mod.rs  usage.rs
src/components/: UpdateNotification.tsx
src/renderer/: App.tsx  index.html  main.tsx
src/shared/: claude-cli.ts  pane-types.ts  types.d.ts  types.d.ts.map  types.ts
tests/: setup.ts
tests/components/: InputBox.test.tsx  MainLayout.test.tsx  SkillPanel.test.tsx  StatusBar.test.tsx  TerminalView.test.tsx  TitleBar.test.tsx
tests/e2e/: app.spec.ts
tests/integration/: license.test.tsx  main-screen.test.tsx  secondary-screens.test.tsx
tests/main/: config-store.test.ts  license-store.test.ts  pty-manager.test.ts  skill-scanner.test.ts  update-manager.test.ts  usage-store.test.ts
tests/pages/: HelpPage.test.tsx  (+5 more)
(+364 files in other folders)
