[package]
name = "clabs"
version = "1.9.3"
description = "Claude Labs Skillpack GUI"
authors = ["Claude Labs"]
edition = "2021"

[lib]
name = "clabs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
notify = "7"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
regex = "1"
chrono = "0.4"
open = "5"
