[package]
name = "clabs"
version = "1.9.3"
description = "Claude Labs Skillpack GUI"
authors = ["Claude Labs"]
edition = "2021"
default-run = "clabs"

[lib]
name = "clabs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clabs-cli"
path = "src/bin/clabs-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
notify = "7"
similar = "2"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
regex = "1"
chrono = "0.4"
open = "5"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
raw-window-handle = "0.6.2"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSColor", "NSResponder"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAMetalLayer"] }
